# VAKGPT

./: LICENSE  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: web_search.py
backend/app/config/: database.py  settings.py
backend/app/controllers/: auth_controller.py  chat_controller.py  hello_controller.py  session_controller.py
backend/app/middleware/: auth_middleware.py
backend/app/models/: user_model.py
backend/app/routes/: auth_route.py  chat_route.py  hello.py  protected_route.py  session_route.py
backend/app/services/: LLMManager.py  MongoDBChainOrchestrator.py  PromptManager.py  auth_service.py  chat_message_histories.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: AuthModel.tsx  layout.tsx  page.tsx
frontend/src/app/chat/: ChatInterface.tsx  index.module.css  page.tsx
frontend/src/app/context/: AuthContext.tsx
frontend/src/components/: app-sidebar.tsx  nav-main.tsx  nav-user.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/lib/: auth.ts
