[project]
name = "VAKGPT-backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pymongo (>=4.11,<5.0)",
    "langchain-mongodb (>=0.4.0,<0.5.0)",
    "motor (>=3.7.0,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
